[NAE-1617] Authority refactor
- refactored old swagger annotations to new
- changed private to protected at BaseAuthorizationServiceAspect.isAllowedByExpression